--- a/Challenge07/environment_setup/iac-create-di-environment.yml
+++ b/Challenge07/environment_setup/iac-create-di-environment.yml
@@ -14,6 +14,14 @@ stages:
       vmImage: 'ubuntu-latest'
     timeoutInMinutes: 0
     steps:
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          # Write your commands here
+          
+          echo 'Hello world'
+          echo '$(Build.SourcesDirectory)'
     - task: AzureResourceGroupDeployment@2
       inputs:
         azureSubscription: '$(AZURE_RM_SVC_CONNECTION)'
