--- a/Challenge07/environment_setup/iac-create-di-environment.yml
+++ b/Challenge07/environment_setup/iac-create-di-environment.yml
@@ -5,11 +5,11 @@ variables:
 - group: devopsforai-aml-qa-vg
 
 stages:
-- stage: 'Dev'
-  displayName: 'Dev'
+- stage: 'QA'
+  displayName: 'QA'
   jobs:
-  - job: "Provision_Dev"
-    displayName: "Provision Dev resources"
+  - job: "Provision_QA"
+    displayName: "Provision QA resources"
     pool:
       vmImage: 'ubuntu-latest'
     timeoutInMinutes: 0
