--- a/Challenge07/environment_setup/iac-prepare-pipelines.yml
+++ b/Challenge07/environment_setup/iac-prepare-pipelines.yml
@@ -2,7 +2,7 @@ pr: none
 trigger: none
 
 variables:
-- group: devopsforai-aml-vg
+- group: devopsforai-aml-qa-vg
 - name: INPUT_CONTAINER_NAME
   value: 'inputdata'
 - name: TRAINING_CONTAINER_NAME
